Increases contrast and fixes minor styling issues

--- a/app/assets/stylesheets/application/components/_separator_text.css.sass
+++ b/app/assets/stylesheets/application/components/_separator_text.css.sass
@@ -2,12 +2,13 @@
 @import application/variables
 
 .ht-separator-text
-  $_color: $color_solarized_base2
+  $_text_color: $color_solarized_base1
+  $_line_color: $color_solarized_base2
 
   position:   relative
   display:    table
   width:      100%
-  color:      $_color
+  color:      $_text_color
 
   &:before, &:after, & > p
     display: table-cell
@@ -16,7 +17,7 @@
     content:           "\00a0"
     width:             50%
     height: 1px
-    border-top:        1px solid $_color
+    border-top:        1px solid $_line_color
     position:          relative
     top:               0.8em
   p
