--- a/app/assets/stylesheets/application/models/_user.css.sass
+++ b/app/assets/stylesheets/application/models/_user.css.sass
@@ -14,6 +14,9 @@
     +background-size(cover)
     +border-radius($borderRadiusSmall)
 
+    // default only used when offline
+    background-color: $wellBackground
+
     +translateZ(0)
     +filter(sepia(1))
     &:hover
