--- a/app/assets/stylesheets/bootstrap_ext/_type.css.sass
+++ b/app/assets/stylesheets/bootstrap_ext/_type.css.sass
@@ -1,5 +1,6 @@
 @import compass
 
 .muted
-  +opacity(0.66)
-  color: inherit // bootstrap's default is a custom color
+  color: $color_solarized_base1
+  // +opacity(0.66)
+  // color: inherit // bootstrap's default is a custom color
